--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "t-ui",
+  "name": "@bennnis/tui",
   "version": "1.0.0",
   "description": "A high quantity ui component library",
-  "author": "Deris",
+  "author": "Bennnis",
   "private": true,
   "bin": {
     "tui": "./tui-cli"
@@ -16,6 +16,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@bennnis/tui": "0.0.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -69,6 +70,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
